fix: correct large margin on fat footer on tablets and below
[task] - https://app.asana.com/0/0/921766955143580/f

--- a/src/sass/_tablet.scss
+++ b/src/sass/_tablet.scss
@@ -257,6 +257,7 @@ html.rqf-page {
       .col-third {
         width:98%;
         width:calc(100% - 20px);
+        margin-left: initial;
       }
     }
     // Tables
